--- a/templates/base.html
+++ b/templates/base.html
@@ -32,9 +32,10 @@
 
 
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
+      <form action="{% url 'home' %}" class="form-inline my-2 my-lg-0" method="POST">
+          {% csrf_token %}
+        <input name="zipcode" class="form-control mr-sm-2" type="search" placeholder="Enter Zip Code" aria-label="Search">
+        <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Lookup</button>
       </form>
     </div>
 </nav>
