--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,24 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Hello World</h1>
+
+  <br/>
+    {% if api %}
+      {% if api == "Error..." %}
+        There was an Error
+      {% else %}
+
+        <div class="jumbotron">
+          <h1 class="display-4">  {{ api.0.Category.Name }} </h1>
+          <p class="lead">{{ api.0.ReportingArea }} Air Quality:  {{ api.0.AQI }}</p>
+
+          
+
+        </div>
+
+        Air Quality:  {{ api.0.AQI }}<br>
+        Area:  {{ api.0.ReportingArea }}<br>
+        Category:  {{ api.0.Category.Name }}<br>
+      {% endif %}
+    {% endif %}
 {% endblock %}
